# yolov8seg-ort-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
