[package]
name = "yolov8seg-ort-rs"
version = "0.0.0"
edition = "2021"

[dependencies]
ort = "1.16.3"
ndarray = "0.15"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
image = "0.25.1"
show-image = { version = "0.14.0", features = [ "image", "raqote" ] }
raqote = { version = "0.8", default-features = false }
ureq = "2.1"
tracing = "0.1"
imageproc = "0.25.0"

[features]
load-dynamic = [ "ort/load-dynamic" ]
cuda = [ "ort/cuda" ]
